# feedback-analysis-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  sonar-project.properties
dify-workflows/: feedback-structuring-v1.yml  feedback-structuring-v2-candidate.yml  feedback-structuring-v3-candidate.yml  issue-cluster-narrative-v1-candidate.yml  sop-draft-v1-candidate.yml  suite-v1-manifest.json  weekly-report-narrative-v1-candidate.yml
docs/: activation-checklist.md  architecture.md  deployment.md  evaluation-boundary.md  human-audit-guide.md  resume.md  workflow-suite-activation.md
feedback_app/: __init__.py  analysis.py  analyzers.py  clustering.py  config.py  database.py  embeddings.py  evidence.py  main.py  models.py  pipeline.py  privacy.py  reports.py  routing.py  schemas.py  service.py  sop.py  worker.py  workflow_suite.py
migrations/: env.py
portfolio/: index.html
tests/: test_analysis.py  test_analyzers.py  test_api_boundaries.py  test_api_full.py  test_api_full_paths.py  test_api_more.py  test_candidate_holdout.py  test_clustering.py  test_dataset.py  test_dify_workflow_suite.py  test_embeddings.py  test_evaluate.py  test_evidence.py  test_pipeline.py  test_pipeline_db.py  test_privacy.py  test_quality_edges.py  test_reports.py  test_routing.py  test_service.py  test_tool_path_boundaries.py  test_v5_holdout.py  test_v6_holdout.py  test_v7_holdout.py  test_web_icon.py  test_worker.py  test_workflow_suite.py
tools/: __init__.py  capture_analysis_cache.py  evaluate.py  generate_dataset.py  (+11 more)
(+65 files in other folders)
