[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feedback-analysis-agent"
version = "0.1.0"
description = "Structured customer-feedback analysis for a fictional project collaboration SaaS"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "prometheus-client>=0.21,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "scikit-learn>=1.5,<2",
  "sqlalchemy>=2.0,<3",
  "tenacity>=9,<10",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
embedding = ["sentence-transformers>=3.3,<4"]
dev = ["pytest>=8.3,<10", "pytest-cov>=6,<8", "ruff>=0.9,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["feedback_app", "tools"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
